test/negative/705_tuple_size_mismatch.err
705_tuple_size_mismatch.fx:2:5: error: improper type of the tuple pattern
 2 | val (a, b) = (1, 2, 3)
   |     ^

1 errors occured during type checking.
